[package]
name = "emu6800"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
serde = { version="1.0.188", features=[ "derive" ]}
serde_json = "1.0.107"

[dependencies]
bitflags="2.4.0"
emucore= {path="../emucore"}
serde = { version="1.0.188", features=[ "derive" ]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"

