[package]
name = "emu6800"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
serde = { version="1.0.188", features=[ "derive" ]}
serde_json = "1.0.107"

[dependencies]
bitflags="2.4.0"
convert_case = "0.6.0"
emucore= {path="../emucore"}
itertools = "0.12.0"
serde = { version="1.0.188", features=[ "derive" ]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"

[[bin]]
name= "gentest"
path = "src/main.rs"

