[package]
name = "emu6809"
version = "0.1.0"
authors = ["Gaz Liddon"]
categories =["emulation", "motorola", "6809"]
edition = "2021"
build = "build.rs"
description = "In development 6809 emulator"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gazliddon/crates"

[build-dependencies]
sha1 = {workspace=true}
bitflags={ workspace=true }
serde = { workspace=true, features = ["derive"] }
serde_yaml = {workspace= true}
serde_json = {workspace= true}

[dependencies]
num="0.4.1"
byteorder="1.4.3"
sha1 = {workspace=true}
bitflags= {workspace=true}
lazy_static = {workspace=true}
thiserror={workspace=true}

serde = { workspace="true", features = ["derive"] }
serde_yaml = {workspace= true}
serde_json = {workspace= true}

log={workspace=true}
itertools = {workspace=true}

