[package]
name = "emu6809"
version = "0.1.1"
authors = ["Gaz Liddon"]
categories =["Emulators"]
edition = "2021"
build = "build.rs"
description = "In development 6809 emulator"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gazliddon/crates"

[build-dependencies]
sha1 = "0.10.6"
serde = { version="1.0.188", features=[ "derive" ]}
serde_yaml = "0.9.25"
serde_json = "1.0.107"

[dependencies]
num="0.4.1"
byteorder="1.4.3"
sha1 = "0.10.6"
bitflags={version= "2.4.0"}
lazy_static="1.4.0"
thiserror="1.0.48"
log="0.4.20"
itertools = "0.11.0"
serde = { version="1.0.188", features=[ "derive" ]}
serde_yaml = "0.9.25"
serde_json = "1.0.107"


