[package]
name = "emucore"
version = "0.1.0"
authors = ["Gaz Liddon"]
categories =["emulators"]
edition = "2021"
description = "Core functionality for emulators"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gazliddon/crates"

[build-dependencies]
serde = { version="1.0.188", features=[ "derive" ]}
serde_json = "1.0.107"

[dependencies]
bitflags="2.4.0"
byteorder="1.4.3"
lazy_static="1.4.0"
log="0.4.20"
num="0.4.1"
serde = { version="1.0.188", features=[ "derive" ]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sha1 = "0.10.6"
thiserror="1.0.48"

