[package]
name = "grl-sources"
version = "0.2.0"
authors = ["Gaz Liddon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thin-vec = {workspace=true}
thiserror = {workspace=true}
lazy_static = {workspace=true}
anyhow = {workspace=true}
pretty_assertions={workspace=true}

base16ct="*"
base64ct="*"
ego-tree="*"
env_logger="*"
log="*"
path-clean="*"
pathdiff="*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
sha1="*"

symbols = {version = "*", features=["serde_support"], package="grl-symbols"}
utils = {version = "*", package="grl-utils"}

