[package]
name = "grl-sources"
version = "0.2.0"
authors = ["Gaz Liddon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

thin-vec="0.2.12"
thiserror="1.0.48"
lazy_static="1.4.0"
anyhow="1.0.75"
pretty_assertions="1.4.0"

base16ct="*"
base64ct="*"
ego-tree="*"
env_logger="*"
log="*"
path-clean="*"
pathdiff="*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"

symbols = {version = "*", features=["serde_support"], package="grl-symbols"}
utils = {version = "*", package="grl-utils"}

