[package]
name = "grl-symbols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thin-vec="0.2.12"
ego-tree= "0.6.2"
serde = { version="1.0.188", features=[ "derive" ], optional=true}
serde_json ={  version = "1.0.107", optional=true }

[dev-dependencies]
grl-utils={path="../grl-utils"}
pretty_assertions="1.4.0"

[features]
default=["serde_support"]
serde_support =["dep:serde", "dep:serde_json"]

