[package]
name = "grl-utils"
version = "0.2.0"
authors = ["Gaz Liddon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base16ct="*"
path-clean="1.0.1"
pathdiff="0.2.1"
sha1 = "0.10.6"
thin-vec="0.2.12"
thiserror="1.0.48"

[dev-dependencies]
pretty_assertions="1.4.0"

