[package]
name = "symbols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"], optional=true}
serde_json = {version = "*", optional=true}
anyhow="*"
ego-tree="*"
regex="*"
thin-vec="*"

[features]
serde_support =["dep:serde", "dep:serde_json"]
