[package]
name = "symbols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace=true}
thin-vec = {workspace=true}
regex={workspace=true}

serde = { version = "*", features = ["derive"], optional=true}
serde_json = {version = "*", optional=true}
serde_json_any_key= {version="*", optional=true}
ego-tree="*"



[dev-dependencies]
utils={path="../utils"}
pretty_assertions={workspace=true}

[features]
default=["serde_support"]
serde_support =["dep:serde", "dep:serde_json", "dep:serde_json_any_key"]

