[package]
name = "unraveler"
version = "0.1.1"
edition = "2021"
authors = ["Gaz Liddon"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories =["Parser implementations "]
description = "In development combinatorial parser"
repository = "https://github.com/gazliddon/crates"

[dependencies]
paste="1.0.14"
thiserror="1.0.48"
